[gd_scene load_steps=5 format=3 uid="uid://lljyty4qe7fo"]

[ext_resource type="Script" uid="uid://bpl0apb6qvlg1" path="res://ui/pause_menu.gd" id="1_50142"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejwgg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50142"]
content_margin_left = 3.0
content_margin_top = 10.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.47058824, 0.5921569, 0.4509804, 0)

[sub_resource type="Theme" id="Theme_ejwgg"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(1, 0.4225852, 0.28988495, 1)
PanelContainer/styles/panel = SubResource("StyleBoxFlat_50142")
RichTextLabel/font_sizes/normal_font_size = 23

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50142")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3764706, 0.23137255, 0, 0.37254903)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 100.0
offset_right = 597.0
offset_bottom = 410.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ejwgg")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_ejwgg")
theme_override_constants/separation = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu"
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = " Resume"
alignment = 0
expand_icon = true

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
text = " Restart"
alignment = 0
expand_icon = true

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
text = " Save"
alignment = 0

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
text = " Load"
alignment = 0

[node name="PanelContainer5" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Title_screen" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer5"]
layout_mode = 2
text = "Go to TItle Screen"
alignment = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 924.0
offset_top = 456.0
offset_right = 1067.0
offset_bottom = 635.0
text = "Move = W A S D
Attack = Left Click
Sneak = C
Crawl = C (HOLD)
Gun = 1
Lurking Enemy = V
Wall Hug = SPACE"

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer4/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer3/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer5/Title_screen" to="." method="_on_title_screen_pressed"]
